# beat-off

./: .gitignore  .gitmodules  Makefile  Makefile.in  config.ini  config.status  configure  configure.ac  layout.ini
assets/: basic.frag  basic.geom  basic.vert
assets/data/script/: main.lua
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
core/: atomic.h  audio.c  audio.h  cls.c  cls.h  ctor_dtor.cpp  debug.c  debug.h  defs.h  err.h  init.cpp  init.hpp  internal.h  main.c  object.c  object.h  parameter.c  parameter.h  slot.c  slot.h  time.h  widget.c  widget.h
filters/: filter.c  filter.h  vamp.cpp  vamp.h
hits/: hit.c  hit.h
lib/lux/src/: lux.c
midi/: midi.c  midi.h
output/: output.c  serial.c  slice.c  slice.h
patterns/: pattern.c  pattern.h
signals/: signal.c
src/: confdefs.h  confdefs.h.in
src/audio/: audio.c  audio.h  input_pa.c  input_pa.h
src/core/: beat-off.h  config.def  err.h  main.c  main.cpp  parameter.h  slot.c  slot.h
src/entity/: entity.c.bak  entity.cpp  entity.h  window.h
src/filters/: filter.c  filter.h  vamp.cpp
src/live/: Makefile
src/midi/: midi.c  midi.h
src/output/: output.c  slice.c  slice.h
src/patterns/: bubble.c  fade.c  full.c  pattern.c  pattern.h  perlin.c  psparkle.c  rainbow.c  sparkle.c  static.h  strobe.c  swipe.c  wave.c
src/properties/: array.h  entity.h  entitypool.h  property.h
src/render/: drawable.cpp  drawable.h  renderable.c  renderable.h
src/timebase/: timebase.c  timebase.h  timebase_init.cpp
src/ui/: graph.c  graph.c.bak  graph.h  item.cpp  item.h  label.h  layout.c  layout.def  layout.h  rect.h  slider.c  slider.c.bak  slider.h  text.c  text.h  ui.c  ui.c.bak  ui.h  ui.stub.cpp  vertexattrib.h  waveform.c  waveform.c.bak  waveform.h  window.h
src/util/: MurmurHash3.cpp  MurmurHash3.h  asm.h  color.c  color.h  ini.c  math.h  murmur3_32_constexpr.hpp  perlin.c  siggen.c  siggen.h  signal.c  sse_mathfun.h  string.c  string.h  util.h
src/waveform/: waveform.c  waveform.h
timebase/: timebase.c  timebase.h
ui/: boxlayout.c  boxlayout.h  graph.c  graph.h  layout.c  layout.h  mainwin.c  mainwin.h  slider.c  text.c  ui.c  ui.c.bak  ui.h  ui_cls.c  ui_cls.h  ui_item.c  ui_item.h  waveform.c  window.c  window.h
util/: asm.h  hash.c  hash.h  ini.c  math.h  mem.h  rect.h
waveform/: waveform.c  waveform.h
